test/language/spec/syntax/valid/boolean_literal.topo
// Boolean literals used in variable assignment expressions

namespace app {
  public:
    void check();
    fn check {
      enabled = true;
      disabled = false;
    }

  protected:
    void helper();
}
