test/language/spec/syntax/invalid/illegal_character.topo
// TEST: illegal character in source
// EXPECT-ERROR: unexpected character

namespace app {
  public:
    void run@();
}
